# todo-api

./: README.md  S.C.O.R.E.md  app.db  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_api.py
