# file: pyproject.toml
[project]
name = "crud_todos"
version = "0.1.0"
description = "A minimal REST CRUD service for Todos."
authors = ["Gemini"]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]
